syntax = "proto3"; //指定proto版本

package proto;
option go_package = "net/grpc/proto";

message Port {
    string ip = 1;
    int32 privatePort = 2;
    int32 publicPort = 3;
}

message ContainerInfo {  // 定义单个容器的统计信息
  string id = 1;
  string image = 2;
  string imageId = 3;
  repeated Port ports = 4;
  map<string, string> validatorLabel = 5;
  string state = 6;
}

message ContainerInfos {  // 定义ec2实例中的container统计信息，server端返回信息给客户端
  repeated ContainerInfo info = 1;
}

message MessageRequest {  // 定义请求信息
  string question = 1;
}

message MessageResponse {  // 定义请求信息
  string question = 1;
}

message ValidatorInfo { //定义启动验证者的信息
  int32 validatorId = 1;
  string validatorPubKey = 2;
}



service Grpc{
  rpc GetContainerList(MessageRequest) returns(ContainerInfos);
  rpc StartNewValidator(ValidatorInfo) returns(MessageResponse);
  rpc StopValidator(ValidatorInfo)  returns(MessageResponse);
}